[package]
name = "Omega"
version = "0.1.0"
edition = "2024"

[dependencies]
ttp-core = { git = "https://github.com/Tensamin/ttp.git", package = "ttp-core" }
ttp-native = { git = "https://github.com/Tensamin/ttp.git", package = "ttp-native" }

actix-web = { version = "4.12.1", features = ["rustls-0_23"] }
aes-gcm = "*"
ansi_term = "0.12.1"
anyhow = "1.0.101"
base64 = "0.22.1"
dashmap = "6.1.0"
dotenv = "0.15.0"
hex = "0.4.3"
hkdf = "0.12.4"
json = "0.12.4"
once_cell = "1.21.3"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom", "std"] }
reqwest = { version = "0.13.2" }
rustls = { version = "0.23.37", default-features = false, features = [
    "std",
    "tls12",
    "aws-lc-rs",
    "prefer-post-quantum",
] }
rustls-pemfile = "2.2.0"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-async-std"] }
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "*", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
x448 = "0.6.0"
zip = "6.0.0"
thiserror = "2.0.18"
